# ohtu-miniprojekti

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  LICENSE  README.md  interactive_console_output.xml  log.html  output.xml  pyproject.toml  report.html  retro.md  tasks.py  test.txt
.github/workflows/: main.yml
documentation/: user_manual.md
results/: log.html  output.xml  report.html
src/: UILibrary.py  config.py  database_connection.py  index.py  initialize_database.py  stub_io.py
src/UI/: ui.py
src/data/: test-database.sqlite
src/repositories/: bibtex_repository.py
src/services/: IO.py  app_logic.py  bibtex.py  doi_service.py  file_service.py  index.py
src/services/tests/: IO_test.py  app_logic_test.py  bibtex_test.py
src/tests/: IO_test.py  UI_test.py  US11.robot  US6.robot  US7.robot  US8.robot  US9.robot  add_reference.robot  app_logic_test.py  bibtex_test.py  database.robot  doi_service_test.py  file_saver_test.py  file_service_test.py  resource.robot
