[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Helinä Lähteenmäki <helina.lahteenmaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^6.1.1"
python-dotenv = "^1.0.0"
invoke = "^2.2.0"
requests = "^2.31.0"
pybtex = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
coverage = "^7.3.2"
autopep8 = "^2.0.4"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
